# eprocurement

./: .gitignore  Cargo.toml
ui/app/: Cargo.toml  rsc.toml  styles.yaml  theme.yaml
ui/app/public/: index.html
ui/app/src/: lib.rs
ui/app/src/features/: mod.rs
ui/app/src/features/agsa/: agsa_reviews.rs  mod.rs  service.rs  store.rs  types.rs
ui/app/src/features/ai_assistant/: ai_chat.rs  mod.rs  service.rs  store.rs  types.rs
ui/app/src/features/analytics/: analytics_dashboard.rs  mod.rs  service.rs  store.rs  types.rs
ui/app/src/features/audit/: audit_trail.rs  mod.rs  service.rs  store.rs  types.rs
ui/app/src/features/bbbee/: bbbee_goals.rs  mod.rs  service.rs  store.rs  types.rs
ui/app/src/features/catalogue/: catalogue_admin.rs  catalogue_list.rs  mod.rs  service.rs  store.rs  types.rs
ui/app/src/features/contracts/: contract_form.rs  contract_list.rs  contract_milestones.rs  mod.rs  service.rs  store.rs  types.rs
ui/app/src/features/dashboard/: mod.rs  service.rs  (+3 more)
ui/app/src/page/: app_shell.rs  mod.rs
ui/app/src/shared/: mod.rs
ui/app/src/util/: api.rs  auth.rs  format.rs  mod.rs
ui/app/tests/e2e/: agsa_e2e.rs  ai_assistant_e2e.rs  analytics_e2e.rs  audit_e2e.rs  auth_e2e.rs  bbbee_e2e.rs  catalogue_e2e.rs  common.rs  contracts_e2e.rs  dashboard_e2e.rs  documents_e2e.rs  evaluation_e2e.rs  goods_receipt_e2e.rs  grc_e2e.rs  main.rs  mobile_e2e.rs  navigation_e2e.rs  nbac_e2e.rs  purchase_orders_e2e.rs  requisitions_e2e.rs  reverse_auction_e2e.rs  sourcing_plan_e2e.rs  supplier_portal_e2e.rs  suppliers_e2e.rs  tenders_e2e.rs  visual_e2e.rs
(+171 files in other folders)
